--- a/contents/web/default.sass
+++ b/contents/web/default.sass
@@ -1,5 +1,5 @@
 @charset "utf-8"
 body
-	background: #eee
+	background: white
 	*
 		font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif
