--- a/contents/web/default.css
+++ b/contents/web/default.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background: white; }
+  background: #eee; }
   body * {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif; }
 
